--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,27 @@
 services:
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: bookmarket_bot_project-backend
+    ports:
+      - "8000:8000"
+    env_file:
+      - .env
+    depends_on:
+      - db
+
   db:
-    image: postgres:16
+    image: postgres:15
+    container_name: bookmarket_bot_project-db
     environment:
       POSTGRES_DB: app
-      POSTGRES_USER: app
-      POSTGRES_PASSWORD: app
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
     ports:
       - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
-
-  backend:
-    build: ./backend
-    environment:
-      DATABASE_URL: postgresql+psycopg://app:app@db:5432/app
-    ports:
-      - "8000:8000"
-    depends_on:
-      - db
-    volumes:
-      - ./backend:/code
 
 volumes:
   pgdata:
